--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/_codetube1.png" alt="First slide" class="d-block">
+                    ![](images/_codetube1.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_codetube2.png" alt="Second slide" class="d-block">
+                  ![](images/_codetube2.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_codetube3.png" alt="Third slide" class="d-block">
+                      ![](images/_codetube3.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_codetube4.png" alt="Fourth slide" class="d-block">
+                       ![](images/_codetube4.png)
                   </div>
                 </div>
               </div>
@@ -125,19 +125,19 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/_hired1.png" alt="First slide" class="d-block">
+                   ![](images/_hired1.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_hired2.png" alt="Second slide" class="d-block">
+                    ![](images/_hired2.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_hired3.png" alt="Third slide" class="d-block">
+                   ![](images/_hired3.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_hired4.png" alt="Fourth slide" class="d-block">
+                    ![](images/_hired4.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_hired5.png" alt="Fifth slide" class="d-block">
+                   ![](images/_hired5.png)
                   </div>
                 </div>
               </div>
@@ -172,22 +172,22 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    <img src="images/_moviestan1.png" alt="First slide" class="d-block">
+                       ![](images/_moviestan1.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_moviestan2.png" alt="Second slide" class="d-block">
+                        ![](images/_moviestan2.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_moviestan3.png" alt="Third slide" class="d-block">
+                       ![](images/_moviestan3.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_moviestan4.png" alt="Fourth slide" class="d-block">
+                        ![](images/_moviestan4.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_moviestan5.png" alt="Fifth slide" class="d-block">
+                       ![](images/_moviestan5.png)
                   </div>
                   <div class="carousel-item">
-                    <img src="images/_moviestan7.png" alt="Sixth slide" class="d-block">
+                       ![](images/_moviestan6.png)
                   </div>
                 </div>
               </div>
