--- a/index.html
+++ b/index.html
@@ -83,16 +83,16 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                    ![](images/_codetube1.png)
+                    <img src="./images/_codetube1.png" alt="First slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                  ![](images/_codetube2.png)
+                    <img src="./images/_codetube2.png" alt="Second slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                      ![](images/_codetube3.png)
+                    <img src="./images/_codetube3.png" alt="Third slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                       ![](images/_codetube4.png)
+                    <img src="./images/_codetube4.png" alt="Fourth slide" class="d-block">
                   </div>
                 </div>
               </div>
@@ -125,19 +125,19 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                   ![](images/_hired1.png)
+                    <img src="./images/_hired1.png" alt="First slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                    ![](images/_hired2.png)
+                    <img src="./images/_hired2.png" alt="Second slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                   ![](images/_hired3.png)
+                    <img src="./images/_hired3.png" alt="Third slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                    ![](images/_hired4.png)
+                    <img src="./images/_hired4.png" alt="Fourth slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                   ![](images/_hired5.png)
+                    <img src="./images/_hired5.png" alt="Fifth slide" class="d-block">
                   </div>
                 </div>
               </div>
@@ -172,22 +172,22 @@
                 </ol>
                 <div class="carousel-inner">
                   <div class="carousel-item active">
-                       ![](images/_moviestan1.png)
+                    <img src="./images/_moviestan1.png" alt="First slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                        ![](images/_moviestan2.png)
+                    <img src="./images/_moviestan2.png" alt="Second slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                       ![](images/_moviestan3.png)
+                    <img src="./images/_moviestan3.png" alt="Third slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                        ![](images/_moviestan4.png)
+                    <img src="./images/_moviestan4.png" alt="Fourth slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                       ![](images/_moviestan5.png)
+                    <img src="./images/_moviestan5.png" alt="Fifth slide" class="d-block">
                   </div>
                   <div class="carousel-item">
-                       ![](images/_moviestan6.png)
+                    <img src="./images/_moviestan7.png" alt="Sixth slide" class="d-block">
                   </div>
                 </div>
               </div>
