--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h6>Fullstack Web Developer</h6>
             <p>I am a FullStack web developer skilled at writing well-designed, testable and efficient code using current best practices in web development.</p>
            <p>Fast Learner, hard worker and team player with a dedication to solution-oriented problem solving.</p>
-            <a href="https://www72.zippyshare.com/v/efHf7cXM/file.html"><button>Check My Resume &nbsp; &nbsp;<span><i class="fa fa-arrow-circle-right"></i></span></button></a>
+            <a href="https://drive.google.com/file/d/1-DEzqx60HOey8qTNVr2wZtmbqkWNwegU/view?usp=sharing"><button>Check My Resume &nbsp; &nbsp;<span><i class="fa fa-arrow-circle-right"></i></span></button></a>
             <p class="bottom">- MY STACK</p>
           </div> 
         </div>
